# riskflow

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile
airflow/dags/: riskflow_daily_ingest.py  riskflow_daily_ingest.py.bak  riskflow_smoke_test.py
data/perf/: README.md  perf_runs.broken-per-partition-spark-submit.csv  perf_runs.csv  perf_runs.untuned.csv
data/silver_quarantine/load_date=2026-04-09/: part-00000-48ce6913-044a-4626-8147-9faaf7d2101f.c000.snappy.parquet
data/silver_quarantine/load_date=2026-04-11/: part-00001-257cfdd9-08de-4923-bb8c-a756b91854dc.c000.snappy.parquet
data/silver_quarantine/load_date=2026-04-12/: part-00000-92067c2b-8ece-4310-9e9d-dde12140e3ae.c000.snappy.parquet
data/silver_quarantine/load_date=2026-04-17/: part-00000-623332ce-0192-42e9-9a75-757b863edcdd.c000.snappy.parquet
data/silver_quarantine/load_date=2026-04-18/: part-00000-353028b6-deb7-412c-9a07-c325031c642b.c000.snappy.parquet
data/silver_quarantine/load_date=2026-04-24/: part-00001-51f2b8b3-e586-44ba-8a45-58bc536b655c.c000.snappy.parquet
data/silver_quarantine/load_date=2026-04-25/: part-00001-831d30df-979c-4e6c-ae8f-0f38ce379307.c000.snappy.parquet
data/silver_quarantine/load_date=2026-04-26/: part-00000-91eb1bd7-aac1-4e6f-b4d8-a9a4430aac9b.c000.snappy.parquet
data/silver_quarantine/load_date=2026-04-27/: part-00000-82372745-689b-413e-b571-53587130dbd7.c000.snappy.parquet
data/silver_quarantine/load_date=2026-04-28/: part-00000-136970fa-b038-4333-b2e7-8eabc4f1b3e8.c000.snappy.parquet
data/silver_quarantine/load_date=2026-04-30/: part-00000-f7bafc13-cadc-4083-b0f8-d5c119546aa6.c000.snappy.parquet
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: schema.yml  sources.yml
dbt/models/gold/: gold_customer_risk_features.sql  gold_daily_fraud_summary.sql  gold_pipeline_quality_summary.sql  gold_transaction_velocity_features.sql
dbt/models/staging/: stg_pipeline_runs.sql  stg_silver_transactions.sql
dbt/tests/singular/: test_fraud_rates_in_bounds.sql
docs/: decisions.md  performance.md  phase2_setup.md  phase3_setup.md  phase4_setup.md
great_expectations/: .gitignore  great_expectations.yml
great_expectations/checkpoints/: bronze_checkpoint.yml  silver_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  bronze_transactions_suite.json  silver_transactions_suite.json
scripts/: 01_phase3_staging_table.sql  02_streaming_alerts_table.sql  init_postgres.sql  perf_harness.py  split_paysim.py
spark/jobs/: bronze_ingest.py  silver_to_postgres.py  silver_transform.py
streaming/: config.py  consumer.py  fraud_rule.py  producer.py
streaming/tests/: test_fraud_rule.py  test_streaming_integration.py
tests/fixtures/: bronze_parity_fixture.parquet  generate_bronze_parity_fixture.py
tests/integration/: test_bronze_ingest.py  test_pandas_pyspark_parity.py  test_silver_transform.py
tests/unit/: conftest.py  test_lineage.py  test_silver_to_postgres.py  test_silver_transform.py  test_split_paysim.py
transformations/: __init__.py  lineage.py  silver_transform_pandas.py
